# d9f4b60ba0c3e8f72f9b10721c588ff2e909d163ec13825591a283675158d548_airline_passenger_satisfaction

./: .gitignore  .pre-commit-config.yaml  README.md  hash.py  pyproject.toml  requirements.txt
.ruff_cache/: .gitignore
.ruff_cache/0.4.6/: 8477954873352296702
analysis/: eda.ipynb
deploy/: .env  docker-compose.yaml  docker-compose.yml
deploy/airflow/dags/: ml_pipeline_dag.py
deploy/docker/: Dockerfile
results/: default_binary_models_results.csv  final_model.pkl  hyperopt_trials.pkl
src/: data_preprocessing.py  evaluation.py  model_training.py  pipeline.py
